<resources>
    <string name="app_name">Fingerprint_Authentication</string>
    <string name="error_email_exists">This email is already registered with Garcon</string>

    <string name="success_account_created">You account has been successfully created.</string>

    <string name="prompt_firstname">First Name</string>

    <string name="prompt_lastname">Last Name</string>

    <string name="prompt_username">Username</string>

    <string name="prompt_confirmpassword">Confirm Password</string>

    <string name="prompt_phonenumber">Phone Number (999-999-9999)</string>
    <string name="prompt_email">Email</string>

    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>

    <string name="error_invalid_password">The password should be 8–20 characters with 1 uppercase, 1 lowercase, 1 number</string>

    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_incorrect_confirmpassword">The passwords do not match.</string>

    <string name="error_incorrect_email">This email has not been registered with us. Please Sign Up</string>

    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="button_signup">Sign Up</string>

    <string name="error_incorrect_phonenumber">The phone number is not valid.</string>
</resources>
