<?xml version="1.0" encoding="UTF-8"?>

<android.support.constraint.ConstraintLayout tools:showIn="@layout/app_bar_signu"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.kritikagopalakrishnan.fingerprint_authentication.SignUpActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintVertical_bias="0.246"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ProgressBar
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/signup_progress"/>


        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/signup_form">


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/email_signup_form">


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <AutoCompleteTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_firstname"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_firstname"/>

                </android.support.design.widget.TextInputLayout>


                -<android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent">

                <AutoCompleteTextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/signup_lastname"
                    android:textColor="@color/colorPrimary"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_lastname"/>

            </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <AutoCompleteTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_username"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_username"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <AutoCompleteTextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_email"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_email"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_password"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeActionId="@+id/login"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_confirmpassword"
                        android:textColor="@color/colorPrimary"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_confirmpassword"
                        android:imeOptions="actionUnspecified"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeActionId="@+id/login"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent">

                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/signup_phonenumber"
                        android:textColor="@color/colorAccent"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:hint="@string/prompt_phonenumber"
                        android:imeOptions="actionUnspecified"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeActionId="@+id/login"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/buttonSave"
                    android:textColor="@color/colorAccent"
                    android:background="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/button_signup"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>